--- a/src/main/webapp/cashier_account.html
+++ b/src/main/webapp/cashier_account.html
@@ -175,13 +175,12 @@
                 }
                 , {
                     field: 'channel', title: '渠道', align: 'center', templet: function (data) {
+                        if(!data.channel)return '';
                         switch (data.channel) {
                             case 'subscribe':
                                 return '预约入住';
                             case 'directly':
                                 return '直接入住';
-                            case '':
-                                return '';
                         }
                     }
                 }
