--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -90,7 +90,7 @@
             <a href="javascript:;" id="hotelusername"></a>
             <dl class="layui-nav-child">
                 <!--<dd>-->
-                    <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
+                <!--<a href="javascript:;" id="updateHotel">更换酒店</a>-->
                 <!--</dd>-->
                 <dd>
                     <a href="javascript:;" id="updatePass">修改密码</a>
@@ -142,10 +142,11 @@
             var status = $(this).data('status');//在住状态
             var maintain = $(this).data('maintain');//维修状态
             var dirty = $(this).data('dirty');//脏房状态状态
+            var roomState = $(this).data('roomstate');//锁房状态状态
             if (!roomId || !roomNum || !roomTypeName) {
                 showMsg('网络错误，请刷新重试！', 2, false);
             }
-            clickItem(roomId, roomNum, roomTypeName, state, status, maintain, dirty);
+            clickItem(roomId, roomNum, roomTypeName, state, status, maintain, dirty, roomState);
         });
 
         $(document).on("click", ".filterState", function () {
@@ -324,13 +325,13 @@
         }
 
         //弹出层
-        function clickItem(id, roomNum, name, state, status, maintain, dirty) {
+        function clickItem(id, roomNum, name, state, status, maintain, dirty, roomState) {
             layui.use('layer', function () {
                 var layer = layui.layer;
                 layer.open({
                     type: 2,
                     title: roomNum + name,
-                    content: 'iframe_home.html?id=' + id + '&state=' + state + '&status=' + status + '&maintain=' + maintain + '&dirty=' + dirty,
+                    content: 'iframe_home.html?id=' + id + '&state=' + state + '&status=' + status + '&maintain=' + maintain + '&dirty=' + dirty + '&roomState=' + roomState + '&date=' + Date.now(),
                     skin: 'demo-class',
                     shadeClose: true,
                     shade: 0.6,
@@ -402,7 +403,7 @@
                     '</legend>',
                     '<div class="flex-container">'].join("");
                 for (var j = 0; j < f.length; j++) {
-                    str += ['<div data-dirty=', f[j].status === 'dirty', ' data-maintain=', f[j].maintain === 'yes', ' data-status="', f[j].status === 'inthe' || f[j].status === 'timeout',
+                    str += ['<div data-roomstate=', f[j].lockRoomState === 'yes', ' data-dirty=', f[j].status === 'dirty', ' data-maintain=', f[j].maintain === 'yes', ' data-status="', f[j].status === 'inthe' || f[j].status === 'timeout',
                         '" data-state="', judgmentState(f[j].makeStatus),
                         '" class="item state-', f[j].status,
                         '" data-roomid="' + f[j].roomId, '">',
@@ -463,19 +464,12 @@
 
         //房间内的各种状态的加载
         function checkIsClockRoom(r) {
-            // var wlsf = " background-color: #FFBB77 !important; "
-            var mdsf = " background-color: #548C00 !important; ";
-            var qbsf = " background-color: #808040 !important; ";
-            var yyf = " background-color: #01B468 !important; ";
-            var wxf = " background-color: #4F4F4F !important; ";
-            var yld = " background-color: #750000 !important; ";
-            return ['<p class="', ishere(r.lockRoomState), '" style="position: absolute;width: 80px;height: 20px;left: 0;bottom: 0px; ', judgmentState(r.lockRoomState) ? mdsf : '', 'text-align: right;color:#fff;padding-right:10px;">已锁房</p>',
-                '<p class="', ishere(r.maintain) ? ' layui-hide ' : '', '" style="position: absolute;width: 80px;height: 20px;left: 90px;bottom: 0px; ', judgmentState(r.maintain) ? wxf : '', 'text-align: right;color:#fff;padding-right:10px;">维修房</p>',
-                '<p class="', ishere(r.outStatus), '" style="position: absolute;width: 80px;height: 20px;left: 90px;bottom: 20px; ', judgmentState(r.outStatus) ? yld : '', 'text-align: right;color:#fff;padding-right:10px;">预离店</p>',
+            return ['<p class="', ishere(r.lockRoomState), '" style="position: absolute;width: 80px;height: 20px;left: 0;bottom: 0px; background-color: #548C00 !important; text-align: right;color:#fff;padding-right:10px;">已锁房</p>',
+                '<p class="', ishere(r.maintain) ? ' layui-hide ' : '', '" style="position: absolute;width: 80px;height: 20px;left: 90px;bottom: 0px; background-color: #4F4F4F !important; text-align: right;color:#fff;padding-right:10px;">维修房</p>',
+                '<p class="', ishere(r.outStatus), '" style="position: absolute;width: 80px;height: 20px;left: 90px;bottom: 20px; background-color: #750000 !important; text-align: right;color:#fff;padding-right:10px;">预离店</p>',
                 r.checkType === 'hour' ? '<p  style="background-color: #000 !important;position: absolute;width: 170px;height: 20px;left: 0;top: 27px; text-align: right;color:#fff;padding-right:10px;">钟点房</p>' : '',
                 r.balance === 'yes' ? '<img title="余额不足" src="images/money.gif" width="20px" height="20px" style="display: block;position:absolute;left: 20px;top: 53px;" />' : '',
-                // r.memberName != '' ? ('<p style="position:absolute;right: 20px;top: 4px;border: 1px dashed #ffb800;color: #fff;font-weight: bold;padding: 3px;background: #888;" >' + r.memberName + '</p>') : '',
-                '<p class="', !r.makeStatus ? 'layui-hide' : '', '" style="position: absolute;width: 80px;height: 20px;left: 0;bottom: 20px; ', judgmentState(r.makeStatus) ? yyf : '', 'text-align: right;color:#fff;padding-right:10px;">预约房</p>'].join("");
+                '<p class="', !r.makeStatus ? 'layui-hide' : '', '" style="position: absolute;width: 80px;height: 20px;left: 0;bottom: 20px; background-color: #01B468 !important; text-align: right;color:#fff;padding-right:10px;">预约房</p>'].join("");
         }
 
         //判断是否需要禁止显示
