--- a/src/main/webapp/iframe_pick_room3.html
+++ b/src/main/webapp/iframe_pick_room3.html
@@ -56,7 +56,7 @@
 <script src="js/loadjs.js" type="text/javascript" charset="utf-8"></script>
 <script>
 		var $,element,$b,$remove,seleted=parent.sRooms1,allRoom,getSel=[];
-        var downSelected = [];
+        var downSelected = [];var roomtypedata = [];//房型数据
         var yyxf  =  JSON.parse(localStorage.yyxf);
         if(seleted && !seleted.length){
 
@@ -84,7 +84,27 @@
                         $(this).removeClass("pick-jf-selected")
 						// console.log($(this).html())
 						dealUnSel(_d);
-					}else{
+					}else{var count = 0;
+                        var roomTypeCount = 0;
+                        for(var i=0;i<seleted.length;i++){
+                            if(seleted[i]['roomType']==_d['roomType']){
+                                count+=1;
+                            }
+                        }
+                        for(var i=0;i<roomtypedata.length;i++){
+                            if(roomtypedata[i]['name']==_d['roomType']){
+                                roomTypeCount = roomtypedata[i]['count'];
+                                break;
+                            }
+                        }
+                        if(roomTypeCount==0){
+                            layer.alert("可用房型数量不足")
+                            return;
+                        }
+                        if(roomTypeCount==count||roomTypeCount<count){
+                            layer.alert("可用房型数量不足")
+                            return;
+                        };
                         $(this).addClass("pick-jf-selected");
 						dealSel(_d);
                     }
@@ -112,7 +132,7 @@
 						var str = '<p class="room-type-selected">不限</p>';
 						$typeList.empty();
 						try{
-							var r = rs.data;
+							var r = rs.data;roomtypedata = r;
 							for(var i=0;i<r.length;i++){
 								str+='<p data-id="'+r[i].id+'">'+r[i].name+'（'+r[i].count+'）</p>'
 							}
