--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -173,7 +173,10 @@
         return obj;
     }
     function dealRsData(ff) {
-
+        if(ff&&ff==1&&$("#unify").val()==""){
+            layer.alert("价格不能为空")
+            return;
+        }
         var sRooms = JSON.parse(localStorage.modifyPrice);
         $table.empty();
         dealDays();
@@ -257,7 +260,7 @@
     }
 
     function submitInfo() {
-        var _arr = [];
+        var _arr = [];var flagg = false;
         var updatePrice = [];
         rsd.map(function (c,i) {
             var _o={
@@ -270,7 +273,9 @@
             try{
                 $(".rti"+c['roomTypeId']).each(function () {
                     _o[this.dataset['date']]=this.value;
-                    _o['y'+this.dataset['date']] = this.dataset['price'];
+                    _o['y'+this.dataset['date']] = this.dataset['price'];if(this.value==''){
+                        flagg = true;
+                    }
                 })
             }catch (e){
                 // console.log(e)
@@ -281,7 +286,10 @@
                 "roomTypeId":c['roomTypeId'],
                 "priceBOS":dealPriceArr(_o)
             })
-        })
+        });if(flagg){
+            layer.alert("价格不能有空白项")
+            return false;
+        };
         var index = layer.load(1,{time:10*1000});
         $.ajax({
             data: {data:JSON.stringify(updatePrice)},
