--- a/src/main/webapp/iframe_home.html
+++ b/src/main/webapp/iframe_home.html
@@ -157,6 +157,7 @@
             orderId = 0,//在住信息主订单ID
             alRoomCode = 0,//在住信息联房码
             reservationOrderId = 0, //预约信息主订单ID
+            reservationOrderChildId = 0, //预约信息主订单ID
             orderChildId = 0,//子订单ID
             state = false,//预约状态
             status = false,//入住状态
@@ -357,6 +358,8 @@
                     phone = res.data.phone;
                     //保存预约信息中的主订单ID
                     reservationOrderId = res.data.orderId;
+                    //保存预约信息中的子订单ID
+                    reservationOrderChildId = res.data.orderChildId;
 
                     //绑定数据
                     for (var item in res.data) {
@@ -572,7 +575,7 @@
                     url: api.cancelSubUpdate,
                     type: 'POST',
                     dataType: 'json',
-                    data: {orderChildIdS: reservationOrderId},
+                    data: {orderChildIdS: reservationOrderChildId},
                     success: function (data) {
                         if (!data.success) {
                             showMsg(data.errMsg, 2, false);
