--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -125,7 +125,7 @@
     }
     function DateToLStr(t) {
         var dt = null;
-        if(checkType=="day"&&new Date(Number(starttime)).getHours()<6){
+        if(new Date(Number(starttime)).getHours()<6){
             //预约入住时间在6点以前的情况特殊处理
             dt = new Date(new Date(Number(starttime)).getTime()+t-86400000);
         }else{
