--- a/src/main/webapp/iframe_pay.html
+++ b/src/main/webapp/iframe_pay.html
@@ -17,6 +17,7 @@
             <input type="radio" name="payType" lay-filter="payType" value="cart" title="刷卡">
             <input type="radio" name="payType" lay-filter="payType" value="wechat" title="微信">
             <input type="radio" name="payType" lay-filter="payType" value="alipay" title="支付宝">
+            <input type="radio" name="payType" lay-filter="payType" value="other" title="其他支付">
             <input type="radio" name="payType" lay-filter="payType" value="stored" title="储值支付" id="czzf">
 
         </div>
