--- a/src/main/webapp/iframe_orderSettleAccounts.html
+++ b/src/main/webapp/iframe_orderSettleAccounts.html
@@ -225,7 +225,7 @@
             if (!requestData.integralReduction) {
                 delete requestData.integral;
             }
-            if(!requestData.payType === 'stored'){
+            if (!requestData.payType === 'stored') {
                 delete requestData.certificateNumber;
             }
             delete requestData.integralReduction;
@@ -267,19 +267,18 @@
                             //打印
                             parent.layer.confirm('是否打印账单吗？', {icon: 3, title: '提示'}, function (index) {
                                 var id = sessionData.ids[0];
-                                //关闭父页面
+                                //从订单管理中进入时关闭父页面
                                 closeWin();
                                 window.open('queryPrice.html?childId=' + id + '&date=' + Date.now(), '_block', "toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=yes, copyhistory=yes, width=600, height=600");
                                 parent.layer.closeAll();
                             }, function () {
-                                //关闭父页面
+                                //从订单管理中进入时关闭父页面
                                 closeWin();
                                 parent.layer.closeAll();
                             });
                         } else {
                             showMsg('结账失败', 2, false);
                         }
-
                     }
                 });
             }
